app/packs/styles/layout.scss
@use "base_styles" as bs;

html {
    min-height: 100vh;
    //overscroll-behavior: none;
}

body {
    min-height: 100vh;
    display: flex;
    flex-direction: column;
}

#user-main {
    @include bs.media-breakpoint-down(sm) {
        margin-top: calc( bs.$topbar-height + env(safe-area-inset-top));
    }
}

#hidden-reviews .review {
    background-color: bs.$gray-200;
}

.login-card {
  width: 30rem;
}

.swiper-button-prev,
.swiper-button-next {
  @extend .btn, .btn-tertiary !optional;
  @extend .rounded-circle;
  @extend .d-flex, .align-items-center, .justify-content-center;
  width: 44px;
  height: 44px;

  i {
    @extend .fs-2, .mb-0;
  }

  &::after {
    content: "";
  }
}

main {
    @extend .d-flex;
    @extend .flex-fill;

    #container-parent.position-relative {
        @extend .flex-fill;
        @extend .w-100;
        z-index: 1;

        @include bs.media-breakpoint-down(sm) {
            margin-bottom: calc(#{bs.$navbar-padding-y} + env(safe-area-inset-bottom) + 4rem);
        }
    }
}

#sidebar {
    @extend .d-none;
    @extend .d-sm-flex;
    border-right: 1px solid bs.$roamio-tertiary;
    // IOS Safe Area
    padding-left: env(safe-area-inset-left);

    .nav i {
        @extend .h4;
        @extend .mb-0;
        color: bs.$navbar-icon-colour;
    }

    a.nav-link {
        @extend .d-flex;
        @extend .align-items-center;
        @extend .justify-content-center;
        @extend .rounded-0;
        // Desktop lg
        @extend .justify-content-lg-start;
    }

    .nav span {
        @extend .d-none;
        // Desktop lg
        @extend .d-lg-flex;
        @extend .ms-lg-3;
    }

    .navbar-brand {
        @extend .d-flex;
        @extend .align-items-center;
        @extend .justify-content-center;
        // Desktop lg
        @extend .justify-content-lg-start;
    }

    .position-relative .rounded-pill {
        // Desktop lg
        @extend .d-lg-none;
    }

    #user-account-dropdown {

        .dropdown-username {
            @extend .d-none;
            @extend .d-lg-flex;
        }

        .nav-link img {
            @extend .me-0;
            @extend .me-lg-3;
        }

        .dropdown-toggle::after {
            @extend .ms-auto;
            @extend .d-none;
            @extend .d-lg-flex;
        }
    }
}

#topbar {
    @extend .bg-primary;
    // IOS Safe Area
    padding-top: calc(#{bs.$navbar-padding-y} + env(safe-area-inset-top));

    img {
        height: 40px;
    }

    #user-account-dropdown .dropdown-username {
        @extend .d-none;
    }

    // Formatting for the inbox button on the topbar
    ul.nav {

        @extend .text-light;

        span {
            @extend .d-none;
        }

        i {
            @extend .h1;
            color: bs.$navbar-icon-colour;
        }

        .nav-link {
            @extend .p-0;
        }
    }

    .dropdown-toggle {
        color: bs.$navbar-icon-colour;
    }
}

#bottombar {
    // IOS Safe Area
    padding-bottom: max(#{bs.$navbar-padding-y}, env(safe-area-inset-bottom));

    a.nav-link {
        @extend .d-flex;
        @extend .flex-column;
        @extend .justify-content-center;
        @extend .link-dark;
        @extend .py-0;
    }

    .nav i {
        @extend .h3;
        @extend .text-center;
    }

    .nav small {
        @extend .fw-bold;
    }

    .nav-item {
        @extend .col;
        @extend .d-flex;
        @extend .justify-content-center;
    }

    .position-relative {
        @extend .d-flex;
        @extend .justify-content-center;
    }
}

#content footer {
    @extend .d-none;
    @extend .d-sm-flex;
}

#navbar-content {
    #user-account-dropdown a {
        @extend .justify-content-center;
    }
    #user-account-dropdown .dropdown-username {
        @extend .fw-semibold;
    }
}

@include bs.media-breakpoint-up(lg) {
    #sidebar {
        width: bs.$sidebar-lg-width;

        a.nav-link {
            border-radius: bs.$nav-pills-border-radius !important;
        }
    }
}

#landing-topbar {
    padding-top: calc(#{bs.$navbar-padding-y} + env(safe-area-inset-top));
}

footer {
    padding-bottom: env(safe-area-inset-bottom);
}

.nav-badge {
    @extend .position-absolute, .top-0, .start-100, .translate-middle;
    @extend .badge, .rounded-pill, .text-bg-danger;
}

.nav-badge-lg {
    @extend .d-none, .d-lg-flex, .ms-auto;
    @extend .badge, .rounded-pill, .text-bg-danger;
}

.resize-none {
    resize: none;
}

.flex-grow {
    flex: 1 0 auto;
}

.flex-grow-evenly {
    flex: 1 1 0;
}

.change-view-link {
    @extend .d-flex;
    @extend .align-items-center;
    @extend .justify-content-center;
    @extend .p-2;
    @extend .nav-link;
    @extend .gap-1;
    @extend .rounded;
    @extend .fw-semibold;

    &.active {
        @extend .btn;
        @extend .btn-secondary;
    }
}

